[develop] fix: button cursor pointer & no wrap text

--- a/styles/blocks/_button.scss
+++ b/styles/blocks/_button.scss
@@ -2,12 +2,14 @@
   @include flex-center(true);
 
   height: var(--button-height);
-  padding-inline: 35px;
-  font-size: 20px;
+  padding-inline: 32px;
+  font-size: 24px;
   color: var(--color-light);
   background-color: var(--color-dark);
   border: var(--border);
   border-radius: var(--border-radius);
+  white-space: nowrap;
+  cursor: pointer;
 
   @include hover {
     color: var(--color-dark);
